<?xml version="1.0" encoding="utf-8"?><!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2012-2013 ownCloud Inc.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">
    <PreferenceCategory
        android:key="general"
        android:title="@string/prefs_category_general">
        <ListPreference
            android:key="storage_path"
            android:title="@string/prefs_storage_path" />

        <com.owncloud.android.ui.ThemeableSwitchPreference
            android:defaultValue="@string/prefs_value_theme_light"
            android:key="@string/prefs_key_theme"
            android:summary="%s"
            android:title="@string/prefs_theme_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="synced_folders_category"
        android:title="@string/drawer_synced_folders">
        <com.owncloud.android.ui.ThemeableSwitchPreference
            android:key="synced_folder_on_wifi"
            android:title="@string/auto_upload_on_wifi" />
        <Preference
            android:id="@+id/synced_folders_configure_folders"
            android:key="synced_folders_configure_folders"
            android:title="@string/synced_folders_configure_folders" />
    </PreferenceCategory>

	<PreferenceCategory android:title="@string/prefs_category_details" android:key="details">
		<ListPreference
			android:title="@string/prefs_lock"
			android:key="lock"
			android:dialogTitle="@string/prefs_lock_title"
			android:defaultValue="none"/>
		<com.owncloud.android.ui.ThemeableSwitchPreference
			android:title="@string/prefs_show_hidden_files"
			android:key="show_hidden_files"/>
        <com.owncloud.android.ui.ThemeableSwitchPreference
            android:title="@string/prefs_enable_media_scan_notifications"
            android:summary="@string/prefs_enable_media_scan_notifications_summary"
            android:key="show_media_scan_notifications"/>
	</PreferenceCategory>

    <PreferenceCategory
        android:key="more"
        android:title="@string/prefs_category_more">
        <Preference
            android:key="calendar_contacts"
            android:summary="@string/prefs_calendar_contacts_summary"
            android:title="@string/prefs_calendar_contacts" />
        <Preference
            android:key="contacts"
            android:summary="@string/prefs_daily_contacts_sync_summary"
            android:title="@string/actionbar_contacts" />
        <Preference
            android:key="mnemonic"
            android:summary="Displays your E2E 12 words passphrase"
            android:title="@string/prefs_e2e_mnemonic" />
        <Preference
            android:key="help"
            android:title="@string/prefs_help" />
        <Preference
            android:key="recommend"
            android:title="@string/prefs_recommend" />
        <Preference
            android:key="feedback"
            android:title="@string/prefs_feedback" />
        <Preference
            android:key="logger"
            android:title="@string/actionbar_logger" />
        <Preference
            android:key="imprint"
            android:title="@string/prefs_imprint" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about"
        android:title="@string/prefs_category_about">
        <Preference
            android:id="@+id/privacy"
            android:key="privacy"
            android:title="@string/privacy" />
        <Preference
            android:id="@+id/sourcecode"
            android:key="sourcecode"
            android:title="@string/prefs_sourcecode" />
        <Preference
            android:id="@+id/license"
            android:key="license"
            android:title="@string/prefs_license" />
        <Preference
            android:id="@+id/about_app"
            android:key="about_app"
            android:title="@string/about_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="dev_category"
        android:title="@string/prefs_category_dev">
        <Preference
            android:id="@+id/dev_link"
            android:key="dev_link"
            android:title="Download latest dev version" />

        <Preference
            android:id="@+id/changelog_link"
            android:key="changelog_link"
            android:title="Changelog dev version" />
    </PreferenceCategory>

</PreferenceScreen>
